--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "method-override": "^2.3.10",
-    "mongoose": "^4.13.13"
+    "mongoose": "^4.13.13",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
